# of

./: API.rst  APPS.rst  README.rst  db.json  micc3.cfg  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
my_case-1x2cores/: my_case-1x2cores.slurm
of/: __init__.py  cli_ofrun.py  cli_sst_post.py  cli_sst_run.py
tests/: __init__.py  test_cli_sst_post.py  test_cli_sst_run.py
tests/of/: test_of.py
