[tool.poetry]
name = "of"
version = "0.4.1"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/of"
homepage = "https://github.com/etijskens/of"

keywords = []

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
sst-run = "of:cli_sst_run.main"
sst-post = "of:cli_sst_post.main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
